--- a/index.html
+++ b/index.html
@@ -2,14 +2,28 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta name="Referrer" content="origin">
+  <meta http-equiv="Content-Script-Type" content="text/javascript">
+  <meta http-equiv="Content-Style-Type" content="text/css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="셀렉티브">
+  <meta property="og:url" content="http://pam7464.dothome.co.kr/selective/">
+  <meta property="og:img" content="images/mibile.png">
+  <meta property="og:description" content="세상의 멋진 클리에디터를 만나보세요">
+
+  <link rel="shortcut icon" href="images/favicon.png">
+
   <title>SELECTIVE</title>
   <!-- font-awesome -->
   <link rel="stylesheet" href="css/all.css">
   <script src="js/jquery-3.5.0.min.js"></script>
   <script src="js/swiper.js"></script>
   <style>
-
+    *{margin:0;border:none;padding:0;}
+    .wrap{height:2000px;background:rgba(0,0,0,0.5);}
+    .doctop{position:fixed;left:0;top:0;width:100%;height:80px;background:rgba(255,0,0,0.5);}
+    .menu{position:fixed;left:50%;bottom:50px;transform:translateX(-50%);width:300px;height:60px;border-radius:30px;background:white;}
   </style>
   <script>
     $(function(){
@@ -18,6 +32,14 @@
   </script>
 </head>
 <body>
-  
+  <div class="wrap">
+
+  </div>
+  <div class="doctop">
+
+  </div>
+  <div class="menu">
+
+  </div>
 </body>
 </html>
