--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta property="og:title" content="셀렉티브">
   <meta property="og:url" content="https://pam7461.github.io/selective/">
-  <meta property="og:img" content="images/mobile.png">
+  <meta property="og:image" content="images/mobile.png">
   <meta property="og:description" content="세상의 멋진 클리에디터를 만나보세요">
 
   <link rel="shortcut icon" href="images/favicon.png">
