--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       border:none;
       padding:0;
       background:rgba(0,0,0,0.3);
+      z-index:2;
     }
     .login_box{
       width:260px;
