--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       font-family: 'Noto Sans KR';
       color:#666;
     }
+    a{text-decoration:none;}
     ul,li,ol{list-style:none;}
     .clearfix::after{
       content:'';
@@ -159,6 +160,9 @@
       font-size:24px;
       font-weight:normal;
     }
+    .sec_content .swiper-container{
+      padding-bottom: 30px;
+    }
     .swiper01 .swiper-slide{
       display:flex;
       flex-flow:column;
@@ -216,6 +220,26 @@
 
     .swiper02 .swiper-slide img{
       width:100%;
+    }
+    .content_bottom{
+      cursor: pointer;
+    }
+    .content_bottom h4 a{
+      font-family:'Roboto';
+      font-size:14px;
+      color:#f4361e;
+      text-decoration:underline;
+    }
+    .content_bottom p a{
+      font-size:18px;
+      color:#333;
+    }
+    .content_bottom p path{
+      color:#333;
+    }
+    .content_bottom div a{
+      font-size:14px;
+      color:#bbb;
     }
 
     /* 푸터 */
@@ -478,7 +502,9 @@
             </div>
           </div>
           <div class="content_bottom">
-
+            <h4><a href="#">STYLE TIP</a></h4>
+            <p><a href="#">봄 데일리룩 <i class="far fa-heart"></i></a></p>
+            <div><a href="#">댓글 0 · 셀렉트 2</a></div>
           </div>
         </div>
       </article>
@@ -486,12 +512,12 @@
     </section>
 
     <!-- 푸터 -->
-    <footer>
+    <!-- <footer>
       <a href="#" onclick="return false;"><i class="fas fa-home fa-2x"></i></a>
       <a href="#" onclick="return false;"><i class="fas fa-search fa-2x"></i></a>
       <a href="#" onclick="return false;"><i class="fas fa-bars fa-2x"></i></a>
       <a href="#" onclick="return false;"><i class="fas fa-user fa-2x"></i></a>
-    </footer>
+    </footer> -->
   </div>
 </body>
 </html>
