--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
       color:#bbb;
     }
 
+    .sec_bottom{
+      height:300px;
+      background:#f4361e;
+      margin-bottom:0;
+    }
     /* 푸터 */
     footer{
       top:initial;
@@ -1288,7 +1293,9 @@
           </div>
         </div>
       </article>
-      <article class="sec_bottom"></article>
+      <article class="sec_bottom">
+
+      </article>
     </section>
 
     <!-- 푸터 -->
